# ChurnLens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COMPLETE_PROJECT_CHECKLIST.md  Dockerfile  GITHUB_SETUP.md  Project_Mastery_for_Interview.md  README.md  STREAMLIT_DEPLOY.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
.mypy_cache/3.10/: cache.0.db-shm  cache.0.db-wal  cache.1.db-shm  cache.1.db-wal  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db-shm  cache.14.db-wal  (+18 more)
.streamlit/: config.toml
alembic/: env.py
api/: dependencies.py  main.py  schemas.py
dashboard/: POWER_BI_DEPLOY.md  POWER_BI_SETUP.md  POWER_BI_WALKTHROUGH.md  dashboard_data.csv  power_bi_measures.dax
models/: best_model.pkl  model_metrics.json  predictions.csv
notebooks/: 01_data_cleaning.ipynb  02_eda.ipynb  03_ml_modeling.ipynb
reports/: business_report.md  business_summary.json  data_quality_report.csv  feature_importance.csv  outlier_report.csv  statistical_tests.csv
scripts/: export_business_report_pdf.py  load_to_postgres.py  score_all_customers.py
sql/: 01_schema.sql  02_load_data.sql  03_analysis_queries.sql
src/: cohort_analysis.py  config.py  data_cleaning.py  db_models.py  exceptions.py  experiment_tracking.py  explainability.py  features.py  logger.py  ml_models.py  statistical_tests.py
tests/: conftest.py  test_api.py  test_data_cleaning.py  test_features.py  test_ml_models.py
(+5 files in other folders)
